[tool.poetry]
name = "birds_task"
version = "0.1.0"
description = ""
authors = ["AlexanderZug <alexandertsygankov.unterwegs@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
beautifulsoup4 = "4.11.1"
Flask = "2.2.2"
Flask-SocketIO = "5.3.1"
requests = "2.28.1"
uiweb = "^0.7.5"
lxml = "^4.9.3"
pony = "^0.7.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
